--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,24 @@
 <% include ./partials/header %>
-
-<h1>LOGIN PAGE</h1>
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="submit" value="Login">
-</form>
+<div class="row">
+    <h1 style="text-align: center">LOGIN PAGE</h1>
+    <div style="width: 60%; margin: 25px auto;">
+        <form action="/login" method="POST">
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input class="form-control" type="text" name="username" id="username" placeholder="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input class="form-control" type="password" name="password" id="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Login</button>
+                </div>
+                <div class="form-group">
+                    <a class="btn btn-warning btn-lg btn-block" href="/forgot">Forgot Password</a>
+                </div>
+        </form>
+        <a href="/campgrounds">Go Back</a>
+    </div>
+</div>
 <% include ./partials/footer %>
