--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,41 @@
 <% include ./partials/header %>
-<h1>Sign Up</h1>
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Submit</button>
-</form>
+<div class="row">       
+    <h1 style="text-align: center">Sign Up</h1>
+    <div style="width: 60%; margin: 25px auto;">
+        <form action="/register" method="POST">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input class="form-control" type="text" name="username" id="username" placeholder="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input class="form-control" type="password" name="password" id="password" placeholder="password">
+            </div>
+            <div class="form-group">
+                <label for="firstname">Firstname</label>
+                <input class="form-control" type="text" name="firstName" id="firstname" placeholder="first name">
+            </div>
+            <div class="form-group">
+                <label for="lastname">Lastname</label>
+                <input class="form-control" type="text" name="lastName" id="lastname" placeholder="last name">
+            </div>
+            <div class="form-group">
+                <label for="avatar">Avatar</label>
+                <input class="form-control" type="text" name="avatar" id="avatar" placeholder="avatar url">
+            </div>            
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email" placeholder="example@abc.com">
+            </div>
+            <div class="form-group">
+                <label for="admin">Admin Code</label>
+                <input class="form-control" type="text" name="admincode" id="admin" placeholder="Admin Code">
+            </div>            
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
+            </div>
+        </form>
+        <a href="/campgrounds">Go Back</a>
+    </div>    
+</div>        
 <% include ./partials/footer %>
